--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -6,20 +6,20 @@ plugins {
 }
 android {
     namespace 'com.agesa.showcase'
-    compileSdkVersion 34
+    compileSdk 35
 
     defaultConfig {
         minSdkVersion 21
-        //targetSdkVersion 34
+        targetSdk 35
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         version "1.0.0"
     }
-    /*
+/*
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-*/
+    */
 
     buildTypes {
         release {
