--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
     //id 'org.jetbrains.kotlin.android' // varsa
 }
 android {
-    compileSdkVersion(34)
+    compileSdk 35
     namespace 'com.agesa.showcase.app'
     defaultConfig {
         applicationId "com.agesa.showcase.app"
         minSdkVersion 21
-        targetSdkVersion 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -28,6 +28,20 @@ android {
     lintOptions {
         abortOnError false
     }
+    // Java/Kotlin derleyici seviyeleri
+
+    /*
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17   // veya VERSION_17
+        targetCompatibility JavaVersion.VERSION_17   // veya VERSION_17
+    }
+    */
+
+    /*
+    kotlinOptions {
+        jvmTarget = "11" // veya "17"
+    }
+    */
 }
 
 dependencies {
