--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,20 @@
-System.setProperty("file.encoding", "UTF-8")
 
-buildscript {
-    repositories {
-        google()
-        jcenter()
-
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:8.1.4"
-        //classpath 'com.android.tools.build:gradle:4.1.2'
-        //classpath "org.jfrog.buildinfo:build-info-extractor-gradle:+"
-        //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
-        //classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7"
-        //classpath 'com.dicedmelon.gradle:jacoco-android:0.1.3'
-    }
+plugins {
+    id 'com.android.application' version '8.6.1' apply false
+    id 'com.android.library'     version '8.6.1' apply false
+    // id 'org.jetbrains.kotlin.android' version '1.9.24' apply false  // Kotlin kullanıyorsan aç
+    id 'org.jetbrains.kotlin.android' version '1.9.24' apply false
 }
-
-/*
-allprojects {
-    repositories {
-        google()
-        jcenter()
-        //maven { url 'https://jitpack.io' }
-
-       /* maven {
-            url "${artifactory_contextUrl}"
-            credentials {
-                username = "${artifactory_user}"
-                password = "${artifactory_password}"
+subprojects {
+    configurations.configureEach {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == "org.jetbrains.kotlin") {
+                details.useVersion "1.9.24"
             }
         }
-        
-
-
     }
 }
-*/
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
