--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,7 @@ systemProp.sonar.branch.name=master
 #artifactory_password=Starforce1*
 android.useAndroidX=true
 android.enableJetifier=true
+libVersion=1.0.0
+
+nexusUsername=test
+nexusPassword=testuser*
