--- a/showcase/build.gradle
+++ b/showcase/build.gradle
@@ -1,4 +1,14 @@
-//System.setProperty("file.encoding", "UTF-8")
+
+import java.util.Properties
+import groovy.json.JsonSlurper
+
+/*
+plugins {
+    alias(libs.plugins.android.library)
+    alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.maven.publish)
+}
+*/
 
 plugins {
     id 'com.android.library'
@@ -52,5 +62,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.3.0'
     // androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
-
-//apply from: 'jfrog.gradle'
+//apply(from = "nexus.gradle")
+apply from: 'nexus.gradle'
